--- a/IFrame.html
+++ b/IFrame.html
@@ -1,5 +1,5 @@
 <html>
   <p>
-    <iframe src="https://www.snokido.com" width="100%" height="100% frameborder="0" scrolling="yes" allowfullscreen></iframe>
+    <iframe src="https://www.newgrounds.com" width="100%" height="100% frameborder="0" scrolling="yes" allowfullscreen></iframe>
   </p>
 </html>
