--- a/Idk.html
+++ b/Idk.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <html>
-    <p>Snokido: <a href="https://www-snokido-com.translate.goog/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">snokido</a></p>
-    <p>Crazy Games <a href="https://www-crazygames-com.translate.goog/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp&_x_tr_hist=true">crazy games</a></p>
-    <p>Mini Play <a href="https://www.miniplay.com/?utm_campaign=chorizos&utm_source=www-miniplay-com.translate.goog">mini play</a></p>
+    <p>Snokido: <a href="https://www-snokido-com.translate.goog/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp" target="_blank">snokido</a></p>
+    <p>Crazy Games <a href="https://www-crazygames-com.translate.goog/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp&_x_tr_hist=true" target="_blank">crazy games</a></p>
+    <p>Mini Play <a href="https://www.miniplay.com/?utm_campaign=chorizos&utm_source=www-miniplay-com.translate.goog" target="_blank">mini play</a></p>
   </html>
